Fix png name for comment and love

--- a/articles.html
+++ b/articles.html
@@ -74,8 +74,8 @@
                     <div class="card">
                         <img class="card-img" src="image/Article.png" alt="Card image">
                         <div class="card-img-overlay">
-                            <div><img class="comment-icon" src="image/comments.png" alt="">3</div>
-                            <div><img class="love-icon" src="image/love.png" alt="">50</div>
+                            <div><img class="comment-icon" src="image/Comments.png" alt="">3</div>
+                            <div><img class="love-icon" src="image/Love.png" alt="">50</div>
                             <p class="card-title">Why We Do It: Photographers and Photo Editors on the Passion That Drives Their Work</p>
                         </div>
                     </div>
@@ -84,8 +84,8 @@
                     <div class="card">
                         <img class="card-img" src="image/Article.png" alt="Card image">
                         <div class="card-img-overlay">
-                            <div><img class="comment-icon" src="image/comments.png" alt="">3</div>
-                            <div><img class="love-icon" src="image/love.png" alt="">50</div>
+                            <div><img class="comment-icon" src="image/Comments.png" alt="">3</div>
+                            <div><img class="love-icon" src="image/Love.png" alt="">50</div>
                             <p class="card-title">Why We Do It: Photographers and Photo Editors on the Passion That Drives Their Work</p>
                         </div>
                     </div>
@@ -94,8 +94,8 @@
                     <div class="card">
                         <img class="card-img" src="image/Article.png" alt="Card image">
                         <div class="card-img-overlay">
-                            <div><img class="comment-icon" src="image/comments.png" alt="">3</div>
-                            <div><img class="love-icon" src="image/love.png" alt="">50</div>
+                            <div><img class="comment-icon" src="image/Comments.png" alt="">3</div>
+                            <div><img class="love-icon" src="image/Love.png" alt="">50</div>
                             <p class="card-title">Why We Do It: Photographers and Photo Editors on the Passion That Drives Their Work</p>
                         </div>
                     </div>
@@ -104,8 +104,8 @@
                     <div class="card">
                         <img class="card-img" src="image/Article.png" alt="Card image">
                         <div class="card-img-overlay">
-                            <div><img class="comment-icon" src="image/comments.png" alt="">3</div>
-                            <div><img class="love-icon" src="image/love.png" alt="">50</div>
+                            <div><img class="comment-icon" src="image/Comments.png" alt="">3</div>
+                            <div><img class="love-icon" src="image/Love.png" alt="">50</div>
                             <p class="card-title">Why We Do It: Photographers and Photo Editors on the Passion That Drives Their Work</p>
                         </div>
                     </div>
@@ -114,8 +114,8 @@
                     <div class="card">
                         <img class="card-img" src="image/Article.png" alt="Card image">
                         <div class="card-img-overlay">
-                            <div><img class="comment-icon" src="image/comments.png" alt="">3</div>
-                            <div><img class="love-icon" src="image/love.png" alt="">50</div>
+                            <div><img class="comment-icon" src="image/Comments.png" alt="">3</div>
+                            <div><img class="love-icon" src="image/Love.png" alt="">50</div>
                             <p class="card-title">Why We Do It: Photographers and Photo Editors on the Passion That Drives Their Work</p>
                         </div>
                     </div>
@@ -124,8 +124,8 @@
                     <div class="card">
                         <img class="card-img" src="image/Article.png" alt="Card image">
                         <div class="card-img-overlay">
-                            <div><img class="comment-icon" src="image/comments.png" alt="">3</div>
-                            <div><img class="love-icon" src="image/love.png" alt="">50</div>
+                            <div><img class="comment-icon" src="image/Comments.png" alt="">3</div>
+                            <div><img class="love-icon" src="image/Love.png" alt="">50</div>
                             <p class="card-title">Why We Do It: Photographers and Photo Editors on the Passion That Drives Their Work</p>
                         </div>
                     </div>
