--- a/events.html
+++ b/events.html
@@ -71,7 +71,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100 carousel-img" src="img/events/carousel.jpg" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                     <div class="carousel-title">
                         PHOTOGRAPHY CONFERENCE 2021
                     </div>
@@ -85,7 +85,7 @@
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100 carousel-img" src="img/events/carousel.jpg" alt="Second slide">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                     <div class="carousel-title">
                         PHOTOGRAPHY CONFERENCE 2021
                     </div>
@@ -99,7 +99,7 @@
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100 carousel-img" src="img/events/carousel.jpg" alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                     <div class="carousel-title">
                         PHOTOGRAPHY CONFERENCE 2021
                     </div>
@@ -113,7 +113,7 @@
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100 carousel-img" src="img/events/carousel.jpg" alt="Fourth slide">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                     <div class="carousel-title">
                         PHOTOGRAPHY CONFERENCE 2021
                     </div>
